--- a/index.html
+++ b/index.html
@@ -5,8 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Hotels</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/flatpickr.min.css">
 </head>
 <body>
-    
+    <section>
+        <div class="outerBox">
+            <div class="box">
+                <h1>Book your vacation hotel</h1>
+                <form action="#">
+                    <label for="name">Name <span>*</span></label><br>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required /><br><br>
+                    <label for="dates">Vacation dates <span>*</span></label><br>
+                    <input placeholder="Select Date" class="date" name="dates" required /><br><br>
+                    <label for="budget">Budget <span>*</span></label><br>
+                    <input type="number" id="budget" name="budget" min="0" required /><br><br>
+                    <label for="location">Preferred Location <span>*</span></label><br>
+                    <input type="text" id="location" name="location" placeholder="Enter preferred location" required /><br><br>
+                    <input type="checkbox" name="hotelCheck" id="hotelCheck" onclick="myFunction()">
+                    <label for="hotelCheck"> I know my Hotel</label><br>
+                    <input type="text" id="inputHotel" style="display:none" placeholder="Enter hotel details">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+        
+    </section>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+<script src="js/flatpickr.js"></script>
+
+<!-- date range script -->
+<script>
+    var fp = flatpickr(".date", {
+        mode: "range",
+        minDate: "today",
+        dateFormat: "d-m-Y",
+    })
+</script>
+
+<!-- checkbox script -->
+<script>
+    function myFunction() {
+    var checkBox = document.getElementById("hotelCheck");
+    var text = document.getElementById("inputHotel");
+
+    if (checkBox.checked == true){
+        text.style.display = "block";
+    } else {
+        text.style.display = "none";
+    }
+}
+</script>
 </body>
 </html>
